js advanced homework 1 fixed overflow

--- a/JS_ADVANCED_MODULE_1_homework_1/styles/style.css
+++ b/JS_ADVANCED_MODULE_1_homework_1/styles/style.css
@@ -283,6 +283,7 @@ body {
     max-width: 320px;
     margin: 0 auto;
     background-color: #fff;
+    overflow: hidden;
 }
 
 
